--- a/ocr.html
+++ b/ocr.html
@@ -58,7 +58,8 @@
                         // 显示正在上传
                         layer.open({
                             id: 'processing' //防止重复弹出
-                            ,content: '正在识别中，可能需要25秒左右... '
+                            ,title: '正在识别中'
+                            ,content: '1核1G的测试服务器太渣，跑得很慢，可能需要耗时一分钟... '
                             ,btn: []
                         });
                     }
