--- a/ocr.html
+++ b/ocr.html
@@ -41,7 +41,7 @@
 
         <hr class="layui-bg-gray">
         <div>
-            <blockquote class="layui-elem-quote">上传的照片在识别完成之后，会自动删除。</blockquote>
+            <blockquote class="layui-elem-quote">1. 上传的照片在识别完成之后，会自动删除。<br />2. 识别结果也不会在服务器有保留。</blockquote>
         </div>
 
         <script src="static/layui/layui.js"></script>
